--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,15 +43,14 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     implementation "com.google.dagger:dagger:$dagger"
     kapt "com.google.dagger:dagger-compiler:$dagger"
-    //    compile "com.google.dagger:dagger-android:$dagger"
-    //    // if you use the support libraries
-    //    compile "com.google.dagger:dagger-android-support:$dagger"
-    //    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger"
+    implementation project(':store')
+
     testImplementation 'junit:junit:4.12'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+//    kapt project(':annotation')
+//    implementation project(':compiler')
 }
