--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    kapt project(':annotation')
-//    implementation project(':compiler')
+    kapt project(':annotation')
+    implementation project(':compiler')
 }
