--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     implementation 'com.squareup:kotlinpoet:0.5.0'
+    implementation project(":store")
 }
 
 test {
